--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <HTML lang="en">
-<HEAD>
-    <TITLE>Document</TITLE>
-</HEAD>
-<BODY>
-    <H1>States</H1>
-    <UL>
-        {% for state in states | sort(attribute='name')  %}
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        <H1>States</H1>
+        <UL>
+        {% for state in states %}
             <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
         {% endfor %}
-    </UL>
-</BODY>
+        </UL>
+    </BODY>
 </HTML>
